Changing z-index to play nice with modals, implementing fix from issue #580

--- a/jquery.timepicker.css
+++ b/jquery.timepicker.css
@@ -8,7 +8,7 @@
 	-moz-box-shadow:0 5px 10px rgba(0,0,0,0.2);
 	box-shadow:0 5px 10px rgba(0,0,0,0.2);
 	outline: none;
-	z-index: 10001;
+	z-index: 10052;
 	margin: 0;
 }
 
